FullQa New/src/FinancialForce Reporting/objects/ReportingCalculation__c.object
<CustomObject>
    <customHelpPage>helpreportingformula</customHelpPage>
    <description>Stores calculation details to be used in reports.</description>
    <fields>
        <fullName>Behaviour__c</fullName>
        <label>Apply by Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Column Calculations</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Row Calculations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataRangeKey__c</fullName>
        <label>Data Range Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DR01</fullName>
                </value>
                <value>
                    <fullName>DR02</fullName>
                </value>
                <value>
                    <fullName>DR03</fullName>
                </value>
                <value>
                    <fullName>DR04</fullName>
                </value>
                <value>
                    <fullName>DR05</fullName>
                </value>
                <value>
                    <fullName>DR06</fullName>
                </value>
                <value>
                    <fullName>DR07</fullName>
                </value>
                <value>
                    <fullName>DR08</fullName>
                </value>
                <value>
                    <fullName>DR09</fullName>
                </value>
                <value>
                    <fullName>DR10</fullName>
                </value>
                <value>
                    <fullName>DR11</fullName>
                </value>
                <value>
                    <fullName>DR12</fullName>
                </value>
                <value>
                    <fullName>DR13</fullName>
                </value>
                <value>
                    <fullName>DR14</fullName>
                </value>
                <value>
                    <fullName>DR15</fullName>
                </value>
                <value>
                    <fullName>DR16</fullName>
                </value>
                <value>
                    <fullName>DR17</fullName>
                </value>
                <value>
                    <fullName>DR18</fullName>
                </value>
                <value>
                    <fullName>DR19</fullName>
                </value>
                <value>
                    <fullName>DR20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupKeys__c</fullName>
        <label>Group Keys</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParseTree__c</fullName>
        <label>Parse Tree</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Calculations</relationshipLabel>
        <relationshipName>ReportingCalculation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RowKey__c</fullName>
        <label>Row Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemplateKey__c</fullName>
        <label>Template Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R01</fullName>
                </value>
                <value>
                    <fullName>R02</fullName>
                </value>
                <value>
                    <fullName>R03</fullName>
                </value>
                <value>
                    <fullName>R04</fullName>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R06</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R09</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
                <value>
                    <fullName>R11</fullName>
                </value>
                <value>
                    <fullName>R12</fullName>
                </value>
                <value>
                    <fullName>R13</fullName>
                </value>
                <value>
                    <fullName>R14</fullName>
                </value>
                <value>
                    <fullName>R15</fullName>
                </value>
                <value>
                    <fullName>R16</fullName>
                </value>
                <value>
                    <fullName>R17</fullName>
                </value>
                <value>
                    <fullName>R18</fullName>
                </value>
                <value>
                    <fullName>R19</fullName>
                </value>
                <value>
                    <fullName>R20</fullName>
                </value>
                <value>
                    <fullName>R21</fullName>
                </value>
                <value>
                    <fullName>R22</fullName>
                </value>
                <value>
                    <fullName>R23</fullName>
                </value>
                <value>
                    <fullName>R24</fullName>
                </value>
                <value>
                    <fullName>R25</fullName>
                </value>
                <value>
                    <fullName>R26</fullName>
                </value>
                <value>
                    <fullName>R27</fullName>
                </value>
                <value>
                    <fullName>R28</fullName>
                </value>
                <value>
                    <fullName>R29</fullName>
                </value>
                <value>
                    <fullName>R30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Calculation</label>
    <nameField>
        <label>Reporting Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Calculations</pluralLabel>
    <recordTypes>
        <fullName>Column</fullName>
        <active>true</active>
        <description>This record type is used when the calculation is of type &quot;Column&quot;. It allows you to create calculations based on the Columns included in the Reporting Definition.</description>
        <label>Column</label>
    </recordTypes>
    <recordTypes>
        <fullName>DataRangeTotal</fullName>
        <active>true</active>
        <description>This record type is used when the calculation is of type &quot;Data Range Total&quot;. It allows you to create total calculations of the entire data range.</description>
        <label>Data Range Total</label>
    </recordTypes>
    <recordTypes>
        <fullName>Row</fullName>
        <active>true</active>
        <description>This record type is used when the calculation is of type &quot;Row&quot;. It allows you to create calculations based on the Row Filters included in the Reporting Definition.</description>
        <label>Row</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subtotal</fullName>
        <active>true</active>
        <description>This record type is used when the calculation is of type &quot;Subtotal&quot;. It allows you to create subtotal calculations.</description>
        <label>Subtotal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>